# MyDataStore

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .tmuxinator.yml  BUILD.bazel  README.md  WORKSPACE  deploy_docker_compose.sh  deploy_k8.sh  deploy_operator.sh  dev  docker-compose.yaml  docs.md  e2e_k8.sh  gke  go.work  go.work.sum  manager.js  my-key-store.code-workspace  nginx.conf  output.json  prometheus.yml  repositories.bzl  run_bazel_tests.sh  scale.sh  test.js  update_deps.sh
.tmuxinator/: tmuxinator-dc.yaml  tmuxinator-dc.yml  tmuxinator-k8.yaml
config/: BUILD.bazel  config.go  config_test.go  default-config.yaml  go.mod  go.sum  test-config.yaml
consensus/: BUILD.bazel  consensus.go  consensus_test.go  fsm.go  go.mod  go.sum
datap/: BUILD.bazel  data.proto
e2e/: .gitignore  Dockerfile  Makefile  create_dashboards.sh  loki-stack.values.yaml  run-kube.sh  test.js
e2e/dashboards/: dashboard-tests.json
e2e/resources/: k6-output-grafana-cloud.yaml
gossip/: BUILD.bazel  go.mod  go.sum  gossip.go  gossip_test.go
hashring/: BUILD.bazel  go.mod  go.sum  hashring.go  hashring_test.go
http/: BUILD.bazel  go.mod  go.sum  http.go  http_test.go
main/: BUILD.bazel  client_manager.go  client_manager_test.go  consistency_controller.go  consistency_controller_test.go  consistency_heap.go  consistency_heap_test.go  go.mod  go.sum  http.go  indexs.go  indexs_test.go  main.go  manager.go  manager_test.go  merkle_tree.go  merkle_tree_test.go  metrics.go  replication.go  ring_member.go  synchronize.go
operator/: BUILD.bazel  Makefile  PROJECT  go.mod  go.sum  hello.sh  main.go  operator.go
operator/api/v1alpha1/: BUILD.bazel  groupversion_info.go  mykeystore_types.go  testkind_types.go  zz_generated.deepcopy.go
operator/config/: BUILD.bazel
operator/config/crd/: kustomization.yaml
operator/config/crd/bases/: cache.andrewdelph.com_mykeystores.yaml  my.domain_testkinds.yaml
operator/config/crd/patches/: cainjection_in_mykeystores.yaml  cainjection_in_testkinds.yaml  webhook_in_mykeystores.yaml  webhook_in_testkinds.yaml
operator/config/manager/: kustomization.yaml  manager.yaml
operator/config/rbac/: mykeystore_editor_role.yaml  mykeystore_viewer_role.yaml  role.yaml  testkind_editor_role.yaml  testkind_viewer_role.yaml
operator/config/samples/: _v1alpha1_testkind.yaml  cache_v1alpha1_mykeystore.yaml  db_v1alpha1_mykeystore.yaml  kustomization.yaml
operator/controllers/: BUILD.bazel  deps.bzl  ingress.go  mykeystore_controller.go  mykeystore_controller_test.go  nodeport.go  result.go  service.go  statefulset.go  suite_test.go  test_env.go  testkind_controller.go
operator/hack/: BUILD.bazel  deps.bzl
raft/: BUILD.bazel  raft.go  raft_test.go
resources/: ingress.yaml  nginx-deployment.yaml  nginx-service.yaml  prom.yaml  store-deployment.yaml  store.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml  zoonavigator-deployment.yaml  zoonavigator-service.yaml
rpc/: BUILD.bazel  client.go  go.mod  go.sum  rpc_test.go  server.go
storage/: BUILD.bazel  badger_storage.go  badger_storage_test.go  go.mod  go.sum  index.go  index_test.go  leveldb_storage.go  storage.go  storage_test.go
store/: BUILD.bazel  api.go  badger_store.go  cache.go  conf.go  config.go  config_test.go  default-config.yaml  delegate.go  events.go  go.mod  go.sum  hashring.go  hashring_test.go  internal_client.go  internal_grpc.go  internal_server.go  leveldb_store.go  leveldb_store_test.go  main.go  main2.go  main_test.go  manager.go  manager_test.go  memberlist.go  merkle_tree.go  merkle_tree_test.go  messaging.go  metrics.go  partition.go  partition_test.go  profile.go  raft.go  store.go  store_performance_test.go  store_test.go  test-config.yaml  utils.go
store/datap/: data.proto
store/proto/: BUILD.bazel  data.proto
tools/: gopackagesdriver.sh
utils/: BUILD.bazel  go.mod  go.sum  intset.go  intset_test.go  utils.go
