load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/andrew-delph/my-key-store
gazelle(
    name = "gazelle",
    args = [
        # "-go_proto_compiler=@io_bazel_rules_go//proto:gogofaster_proto",
        # "-go_grpc_compiler=@io_bazel_rules_go//proto:gogofaster_proto",
    ],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=store/go.mod",
        "-to_macro=repositories.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)
