load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

filegroup(
    name = "default-config",
    srcs = ["default-config.yaml"],
)

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    data = [":default-config"],
    importpath = "github.com/andrew-delph/my-key-store/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

filegroup(
    name = "test-config",
    srcs = ["test-config.yaml"],
)

genrule(
    name = "rename-test-config",
    srcs = ["test-config.yaml"],
    outs = ["config.yaml"],
    cmd = "cp $(SRCS) $@",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    data = [":test-config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_PATH": "../config",
    },
    deps = [
        "@com_github_rotisserie_eris//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
