load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["consensus.go"],
    importpath = "github.com/andrew-delph/my-key-store/consensus",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["consensus_test.go"],
    embed = [":go_default_library"],
)
