load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "datap_proto",
    srcs = ["data.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "datap_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/andrew-delph/my-key-store/datap",
    proto = ":datap_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":datap_go_proto"],
    importpath = "github.com/andrew-delph/my-key-store/datap",
    visibility = ["//visibility:public"],
)
