load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["gossip.go"],
    importpath = "github.com/andrew-delph/my-key-store/gossip",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "@com_github_hashicorp_memberlist//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["gossip_test.go"],
    embed = [":go_default_library"],
)
