load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["hashring.go"],
    importpath = "github.com/andrew-delph/my-key-store/hashring",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//utils:go_default_library",
        "@com_github_bep_debounce//:go_default_library",
        "@com_github_buraksezer_consistent//:go_default_library",
        "@com_github_cespare_xxhash//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["hashring_test.go"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_PATH": "../config",
    },
    deps = [
        "//config:go_default_library",
        "@com_github_buraksezer_consistent//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
