load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["http.go"],
    importpath = "github.com/andrew-delph/my-key-store/http",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//utils:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["http_test.go"],
    data = ["//config:rename-test-config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_PATH": "../config",
    },
    deps = [
        "//config:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
