load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "http.go",
        "manager.go",
    ],
    importpath = "github.com/andrew-delph/my-key-store/main",
    visibility = ["//visibility:private"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["manager_test.go"],
    embed = [":go_default_library"],
)
