load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["manager.go"],
    importpath = "github.com/andrew-delph/my-key-store/main",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//http:go_default_library",
        "//storage:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "main",
    data = ["//config:rename-test-config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_PATH": "config",
    },
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["manager_test.go"],
    embed = [":go_default_library"],
)
