load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = [
        "consistency_controller.go",
        "main.go",
        "manager.go",
        "ring_member.go",
    ],
    importpath = "github.com/andrew-delph/my-key-store/main",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//consensus:go_default_library",
        "//gossip:go_default_library",
        "//hashring:go_default_library",
        "//http:go_default_library",
        "//rpc:go_default_library",
        "//storage:go_default_library",
        "//utils:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_reactivex_rxgo_v2//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "main",
    data = ["//config:rename-test-config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_PATH": "config",
    },
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "consistency_controller_test.go",
        "manager_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_reactivex_rxgo_v2//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_x_sync//semaphore:go_default_library",
    ],
)

go_image(
    name = "go_image",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    importpath = "main",
    visibility = ["//visibility:private"],
)

container_image(
    name = "store_image",
    base = ":go_image",
    data_path = "/store",
    directory = "/store",
    env = {
        "CONFIG_PATH": "/store/config/.",
    },
    files = ["//config:default-config"],
    ports = ["80"],
    repository = "docker.io/andrew-delph",
    tags = ["latest"],
    # repository = "gcr.io/$PROJECT_ID"
    # repository = "us-central1-docker.pkg.dev/builder-project/repo1/greeter_server",
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":store_image",
    registry = "ghcr.io",
    repository = "andrew-delph/my-key-store",
    tag = "latest",
)
