load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["raft.go"],
    importpath = "github.com/andrew-delph/my-key-store/raft",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["raft_test.go"],
    embed = [":go_default_library"],
)
