load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "server.go",
    ],
    importpath = "github.com/andrew-delph/my-key-store/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//datap:datap_go_proto",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
