load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "server.go",
    ],
    importpath = "github.com/andrew-delph/my-key-store/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//datap:datap_go_proto",
        "@com_github_gogo_status//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["rpc_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_gogo_status//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)
