load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:default_visibility public
# gazelle:prefix github.com/andrew-delph/my-key-store
gazelle(
    name = "gazelle",
    args = [
        "-go_proto_compiler=@io_bazel_rules_go//proto:gogofaster_proto",
    ],
    command = "fix",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.work",
        "-to_macro=repositories.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "github.com/andrew-delph/my-key-store",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_dgraph_io_badger_v3//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
