load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:default_visibility public
# gazelle:prefix github.com/andrew-delph/my-key-store
gazelle(
    name = "gazelle",
    args = [
        "-go_proto_compiler=@io_bazel_rules_go//proto:gogofaster_proto",
    ],
    command = "fix",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.work",
        "-to_macro=repositories.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "go_default_library",
    srcs = [
        "leveldb_storage.go",
        "storage.go",
    ],
    data = ["//config:rename-test-config"],
    importpath = "github.com/andrew-delph/my-key-store",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "@com_github_dgraph_io_badger//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/opt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    data = ["//config:rename-test-config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_PATH": "../config",
    },
    deps = [
        "//config:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
