load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "conf.go",
        "delegate.go",
        "events.go",
        "hashring.go",
        "internal_client.go",
        "internal_server.go",
        "main.go",
        "merkle_tree.go",
        "messaging.go",
        "raft.go",
        "store.go",
        "utils.go",
    ],
    importpath = "github.com/andrew-delph/my-key-store/store",
    visibility = ["//visibility:private"],
    deps = [
        "//store/proto:go_default_library",
        "@com_github_buraksezer_consistent//:go_default_library",
        "@com_github_cbergoon_merkletree//:go_default_library",
        "@com_github_cespare_xxhash//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_hashicorp_go_hclog//:go_default_library",
        "@com_github_hashicorp_memberlist//:go_default_library",
        "@com_github_hashicorp_raft//:go_default_library",
        "@com_github_hashicorp_raft_boltdb//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/opt:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/util:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_exp//constraints:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hashring_test.go",
        "merkle_tree_test.go",
        "store_test.go",
    ],
    embed = [":go_default_library"],
    env = {"DATA_PATH": "/tmp/test_store/"},
    deps = [
        # "//store/proto:go_default_library",
        "//store/proto:go_default_library",
        "@com_github_cbergoon_merkletree//:go_default_library",
        "@com_github_serialx_hashring//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/util:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    importpath = "main",
    visibility = ["//visibility:private"],
)

container_image(
    name = "store_image",
    base = ":go_image",
    ports = ["80"],
    repository = "docker.io/andrew-delph",
    tags = ["latest"],
    # repository = "gcr.io/$PROJECT_ID"
    # repository = "us-central1-docker.pkg.dev/builder-project/repo1/greeter_server",
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":store_image",
    registry = "ghcr.io",
    repository = "andrew-delph/my-key-store",
    tag = "latest",
)
