load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

filegroup(
    name = "default-config",
    srcs = ["default-config.yaml"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "badger_store.go",
        "config.go",
        "hashring.go",
        "internal_client.go",
        "internal_server.go",
        "leveldb_store.go",
        "main.go",
        "manager.go",
        "memberlist.go",
        "merkle_tree.go",
        "metrics.go",
        "profile.go",
        "raft.go",
        "store.go",
        "utils.go",
    ],
    data = [":default-config"],
    importpath = "github.com/andrew-delph/my-key-store/store",
    visibility = ["//visibility:private"],
    deps = [
        "//datap:go_default_library",
        "@com_github_buraksezer_consistent//:go_default_library",
        "@com_github_cbergoon_merkletree//:go_default_library",
        "@com_github_cespare_xxhash//:go_default_library",
        "@com_github_dgraph_io_badger_v3//:go_default_library",
        "@com_github_hashicorp_go_hclog//:go_default_library",
        "@com_github_hashicorp_memberlist//:go_default_library",
        "@com_github_hashicorp_raft//:go_default_library",
        "@com_github_hashicorp_raft_boltdb//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/opt:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/util:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_exp//constraints:go_default_library",
    ],
)

filegroup(
    name = "test-config",
    srcs = ["test-config.yaml"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "hashring_test.go",
        "leveldb_store_test.go",
        "manager_test.go",
        "merkle_tree_test.go",
        "store_performance_test.go",
        "store_test.go",
    ],
    data = [":test-config"],
    embed = [":go_default_library"],
    deps = [
        "//datap:go_default_library",
        "@com_github_cbergoon_merkletree//:go_default_library",
        "@com_github_dgraph_io_badger_v3//:go_default_library",
        "@com_github_hashicorp_memberlist//:go_default_library",
        "@com_github_hashicorp_raft//:go_default_library",
        "@com_github_rotisserie_eris//:go_default_library",
        "@com_github_serialx_hashring//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/opt:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/util:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    importpath = "main",
    visibility = ["//visibility:private"],
)

container_image(
    name = "store_image",
    base = ":go_image",
    data_path = "/store",
    directory = "/store",
    env = {
        "CONFIG_PATH": "/store",
    },
    files = [":default-config"],
    ports = ["80"],
    repository = "docker.io/andrew-delph",
    tags = ["latest"],
    # repository = "gcr.io/$PROJECT_ID"
    # repository = "us-central1-docker.pkg.dev/builder-project/repo1/greeter_server",
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":store_image",
    registry = "ghcr.io",
    repository = "andrew-delph/my-key-store",
    tag = "latest",
)
