load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "badger_store.go",
        "hashring.go",
        "internal_client.go",
        "internal_server.go",
        "leveldb_store.go",
        "main.go",
        "manager.go",
        "memberlist.go",
        "merkle_tree.go",
        "metrics.go",
        "profile.go",
        "raft.go",
        "store.go",
        "utils.go",
    ],
    importpath = "github.com/andrew-delph/my-key-store/store",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//datap:go_default_library",
        "@com_github_buraksezer_consistent//:go_default_library",
        "@com_github_cbergoon_merkletree//:go_default_library",
        "@com_github_cespare_xxhash//:go_default_library",
        "@com_github_dgraph_io_badger_v3//:go_default_library",
        "@com_github_hashicorp_go_hclog//:go_default_library",
        "@com_github_hashicorp_memberlist//:go_default_library",
        "@com_github_hashicorp_raft//:go_default_library",
        "@com_github_hashicorp_raft_boltdb//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/opt:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/util:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_exp//constraints:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hashring_test.go",
        "leveldb_store_test.go",
        "manager_test.go",
        "merkle_tree_test.go",
        "store_performance_test.go",
        "store_test.go",
    ],
    data = ["//config:rename-test-config"],
    embed = [":go_default_library"],
    env = {
        "CONFIG_PATH": "../config",
    },
    deps = [
        "//config:go_default_library",
        "//datap:go_default_library",
        "@com_github_cbergoon_merkletree//:go_default_library",
        "@com_github_dgraph_io_badger_v3//:go_default_library",
        "@com_github_hashicorp_memberlist//:go_default_library",
        "@com_github_hashicorp_raft//:go_default_library",
        "@com_github_serialx_hashring//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/opt:go_default_library",
        "@com_github_syndtr_goleveldb//leveldb/util:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
