load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "intset.go",
        "utils.go",
    ],
    importpath = "github.com/andrew-delph/my-key-store/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_x_exp//constraints:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["intset_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
